--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/FileManager/FileContentIndex
+/.vs/FileManager/v17
