--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@
 # Данный GITIGNORE-файл был автоматически создан Microsoft(R) Visual Studio.
 ################################################################################
 
-/.vs/FileManager/FileContentIndex
+/.vs/FileManager/FileContentIndex/3a40e8a8-a6e7-4cd6-a16c-a9a274769d66.vsidx
